2013-07-13 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- added feature scatter/position=absolute|relative

2013-07-06 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- activated math parser for axis limit arguments
	- activated math parser for domain argument in log plots
	- rewrote stacked plots implementation

2013-06-21 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- added tutorials
	- added support for empty column names in pgfplotstable: they will
	implicitly use the column index and generate a warning.

2013-05-20 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed default style options for contour plot


2013-05-12 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- improved internal error bar processing: error bar styles have
	programmatic access to point meta and visualization depends on

2013-03-17 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- RELEASED VERSION 1.8

2013-03-13 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	- fixed bug: remember picture inside of pgfplots axes failed (due to cell picture)

2013-03-10 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	- finished feature 'mesh/color input=explicit' and its docs
	- fixed bug: transformation cart -> polar is more robust now

2013-02-28 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	- added 'data cs=cart' to every colorbar

2013-02-16 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	- Fixed bug in colormap code: providing [1cm] as global mesh width argument
	lead to wrong color map

2013-02-02 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	- fixed bug: axis box path was not closed.

2013-01-22 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	- fixed bug: tick scaling failed if one limit was 0

2013-01-01 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>