@@ -52,6 +52,7 @@ post 1.8:
 - wrote tutorials
 - fixed bug: error bars and point meta did not work together
 - fixed bug: stacked plots did not respect 'visualization depends on'
+- fixed bug: luatex 0.76 is not backwards compatible; added version switch 
 
 1.8:
 - new feature: tight bounding box even if the axis is no box and bb excludes clip path
