@@ -1,3 +1,7 @@
+2013-07-19 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
+
+	- added compatibility switch for luatex 0.76 or newer (unpack was renamed)
+
 2013-07-13 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
 	
 	- added feature scatter/position=absolute|relative
